Fixed active tab width when collapsed

--- a/chrome/EdgyArc-fr/sidebery.css
+++ b/chrome/EdgyArc-fr/sidebery.css
@@ -332,9 +332,7 @@
         }
 
         .scrollable .Tab {
-            & [data-active="true"] {
-                width: 32px !important;
-            }
+            width: 32px !important; 
         }
 
         .PinnedTabsBar {
